--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -2,16 +2,39 @@
 
 	body {
 
-          background-color: white;
+          background-color: #dddddd;
           color: rgba(0,0,0,1);
       
 		}
+
 		
 		p { 
             text-align: justify;
-            text-indent: 50px
+            text-indent: 50px;
                       
 		}
+
+		header#cabecalho img#icone {
+			position: absolute;
+			left: 780px;
+			top: 40px ;
+
+		}
+
+		header#cabecalho {
+
+			
+		}
+
+		div#interface {
+
+			width: 900px;
+			background-color: white;
+			margin: -20px auto 0px auto;
+			box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+			padding: 10px 10px 10px 10px;
+		}
+
 
 		/* Formatação de imagens com legendas */
 
@@ -27,14 +50,6 @@
 			height: 100%;
 
 		}
-
-		figure.foto-oculos img {
-			  
-			position: absolute;
-			
-			left: 800px;
-		}
-
 
 		figure.foto-legenda figcaption {
             opacity: 0;
