--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+@font-face{
+	font-family: 'Fontelogo';
+	src: url("../_fonts/bubblegum-sans-regular.otf");
+}
 	body {
 
           background-color: #dddddd;
@@ -29,7 +32,7 @@
 		}
 
 		header#cabecalho h1 {
-			font-family: Arial, sans-serif;
+			font-family: 'Fontelogo', sans-serif;
 			font-size: 30pt;
 			color:#606060;
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
@@ -137,4 +140,32 @@
 		nav#menu a:hover {
 
 			color: #ffffff;
+		}
+
+		section#corpo {
+
+			display: block;
+			width: 520px;
+			float: left;
+			border-right: 1px solid #606060;
+			padding-right: 15px;
+		}
+
+		aside#lateral {
+			display: block;
+			width: 350px;
+			float: right;
+
+		}
+
+		footer#rodape {
+		 
+			clear: both;
+			border-top: 1px solid #606060;
+
+		}
+
+		footer#rodape p {
+
+			text-align: center;
 		}
