--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -168,6 +168,41 @@
 
 		}
 
+
+		table#tabelaspec td.ce {
+
+			color: #ffffff;
+			background-color: #606060;
+			vertical-align: top;
+			font-weight: bold;			
+
+		}
+
+		table#tabelaspec td.cd {
+			
+			background-color: #cecece;
+
+		}
+
+		table#tabelaspec caption span {
+
+			display: block;
+			float:right;
+			color: #000000;
+			font-size: 8px;
+			margin-top: 10px;
+		}
+
+
+		table#tabelaspec caption {
+
+			color: #888888;
+			font-size: 15pt;
+			font-weight: bolder;
+
+
+		}
+
 		aside#lateral {
 			display: block;
 			width: 350px;
