--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -4,7 +4,7 @@
 	src: url("../_fonts/bubblegum-sans-regular.otf");
 }
 	body {
-
+		  font-family: Arial, sans-serif;
           background-color: #dddddd;
           color: rgba(0,0,0,1);
       
@@ -57,7 +57,25 @@
 			background-color: white;
 			margin: -20px auto 0px auto;
 			box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-			padding: 10px 10px 10px 10px;
+			padding: 10px ;
+		}
+
+		p {
+
+			text-align: justify;
+			text-indent: 50px;
+		}
+
+		a {
+
+			color: #606060;
+			text-decoration: none;
+
+		}
+
+		a:hover {
+
+			text-decoration: underline;
 		}
 
 
@@ -145,11 +163,50 @@
 		section#corpo {
 
 			display: block;
-			width: 520px;
+			width: 500px;
 			float: left;
 			border-right: 1px solid #606060;
 			padding-right: 15px;
 		}
+
+		article#noticiaprincipal h2 {
+			font-size: 13pt;
+			color: #606060;
+			background-color: #dddddd;
+			padding: 5px 0px 5px 10px;
+			margin: 10px 0px 10px 0px;
+
+		}
+
+		header#cabecalho-artigo h1 {
+
+			font-family: 'Fontelogo' , sans-serif;
+			font-size: 20pt;
+			color: #606060;
+			margin: 0px;
+		}
+
+		.direita {
+			text-align: right;
+		}
+
+		header#cabecalho-artigo h2 {
+			font-size: 13pt;
+			color: #cecece;
+			background-color: #ffffff;
+			margin: 0px;
+			margin-top: 0px;
+
+		}
+
+		header#cabecalho-artigo h3 {
+
+			font-size: 12pt;
+			color: #606060;
+
+		}
+
+
 
 		table#tabelaspec {
 
@@ -207,6 +264,29 @@
 			display: block;
 			width: 350px;
 			float: right;
+			background-color: #dddddd;
+			padding: 10px;
+			margin-top: 10px;
+			box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+
+		}
+
+		aside#lateral h1 {
+
+			font-family: 'Fontelogo', sans-serif;
+			font-size: 20pt;
+			color: #606060;
+			margin-top: 0px;
+
+
+		}
+
+		aside#lateral h2 {
+
+			background-color: #606060;
+			font-size: 13pt;
+			color: #ffffff;
+			padding: 5px;
 
 		}
 
